--- a/metplotpy/plots/line/custom_line.yaml
+++ b/metplotpy/plots/line/custom_line.yaml
@@ -7,13 +7,15 @@ yaxis:
   title: accumulated precip amounts (cm)
 lines:
   - name: Data1 Trace
-    data_file: /Users/minnawin/feature_19_line/METplotpy/metplotpy/plots/line/line1_plot_data.txt
+    data_file:
+      /Users/minnawin/feature_19_line/METplotpy/metplotpy/plots/line/line1_plot_data.txt
     color: blue
     width: 2
     dash:
 
   - name: Data2 Trace
-    data_file: /Users/minnawin/feature_19_line/METplotpy/metplotpy/plots/line/line2_plot_data.txt
+    data_file:
+      /Users/minnawin/feature_19_line/METplotpy/metplotpy/plots/line/line2_plot_data.txt
     color: firebrick
     width: 4
     dash: dash
