Changed one entry to the data input so that we have two examples: one that uses relative path, the other which uses full path.

--- a/metplotpy/plots/line/custom_line.yaml
+++ b/metplotpy/plots/line/custom_line.yaml
@@ -8,7 +8,7 @@ yaxis:
 lines:
   - name: Data1 Trace
     data_file:
-      /Users/minnawin/feature_19_line/METplotpy/metplotpy/plots/line/line1_plot_data.txt
+      ./line1_plot_data.txt
     color: blue
     width: 2
     dash:
