--- a/metplotpy/plots/config/performance_diagram_defaults.yaml
+++ b/metplotpy/plots/config/performance_diagram_defaults.yaml
@@ -1,7 +1,7 @@
 ---
 # Default settings specific to performance diagram plot
 # Line and marker plots of series data of Success Rate (1-FAR) on x-axis vs. PODY on y-axis.
-title: Performance Diagram "Default title"
+title: Performance Diagram Default title
 xaxis: Success Rate (1 - FAR)
 yaxis: Probability of Detection (PODY)
 plot_ci:
@@ -50,7 +50,7 @@ series_val:
     - TROP_CMORPH_G193
 user_legend:
   - NH
-  - SN
+  - SH
   - TROP
 plot_stat: median
 colors:
@@ -65,9 +65,21 @@ series_line_width:
   - 1
   - 3
 series_symbols:
+  # Circle
   - "o"
+  # square
   - "s"
+  # triangle
   - "^"
+series_line_style:
+  # solid line
+  - "-"
+  # dashed line
+  - "--"
+  # dotted line
+  - ":"
+
+
 stat_input:  /d2/www/dtcenter/met/metviewer_output/data/plot_20200317_151252.data
 plot_output: /tmp/performance_diagram_default.png
 
