--- a/metplotpy/plots/config/performance_diagram_defaults.yaml
+++ b/metplotpy/plots/config/performance_diagram_defaults.yaml
@@ -65,6 +65,7 @@ series_line_width:
   - 1
   - 3
 series_symbols:
+  # Other supported symbols: small circle = ".", ring/hexagon = "H", rhombus/diamond="d"
   # Circle
   - "o"
   # square
