--- a/metplotpy/plots/performance_diagram/custom_performance_diagram.yaml
+++ b/metplotpy/plots/performance_diagram/custom_performance_diagram.yaml
@@ -1,45 +1,84 @@
 ---
-image_name: /tmp/performance_diagram.png
+# Custom settings specific to performance diagram plot
+# Line and marker plots of series data of Success Rate (1-FAR) on x-axis vs. PODY on y-axis.
+title: Performance Diagram ("Custom title")
+xaxis: Success Rate (1 - FAR)
+yaxis: Probability of Detection (PODY)
+plot_ci:
+  - None
+  - None
+  - None
+plot_disp:
+  - True
+  - True
+  - True
+series_order:
+  - 1
+  - 2
+  - 3
+indy_var: fcst_valid_beg
+indy_vals:
+  - 2016-08-12 06:00:00
+  - 2016-08-12 12:00:00
+  - 2016-08-12 18:00:00
+  - 2016-08-13 00:00:00
+  - 2016-08-13 06:00:00
+  - 2016-08-13 12:00:00
+  - 2016-08-13 18:00:00
+  - 2016-08-14 00:00:00
+  - 2016-08-14 06:00:00
+  - 2016-08-14 12:00:00
+  - 2016-08-14 18:00:00
+  - 2016-08-15 00:00:00
+  - 2016-08-15 12:00:00
+  - 2016-08-15 18:00:00
+  - 2016-08-16 00:00:00
+  - 2016-08-16 06:00:00
+  - 2016-08-16 12:00:00
+  - 2016-08-16 18:00:00
+  - 2016-08-17 00:00:00
 
-legend:
-  on: false
-  x: 0.5
-  y: -0.3
-  font:
-    family: sans-serif
-    size: 12
-    color: black
-  bgcolor: # set to white in default config
-  bordercolor: # black in default config
-  borderwidth: 2
+series_val:
+  model:
+    - GFS_0p25_G193
+  vx_mask:
+    - NH_CMORPH_G193
+    - SH_CMORPH_G193
+    - TROP_CMORPH_G193
+user_legend:
+  - NH
+  - SH
+  - TROP
+plot_stat: median
+colors:
+  # red
+  - "#ff0000"
+  # limegreen, as name of color
+  - limegreen
+  # electric indigo/vivid purple
+  - "#8000ff"
+series_line_width:
+  - 1
+  - 1
+  - 3
+series_symbols:
+  # Other supported symbols: small circle = ".", ring/hexagon = "H", rhombus/diamond="d"
+  # Circle
+  - "o"
+  # square
+  - "s"
+  # triangle
+  #- "^"
+  # ring
+  - "H"
+series_line_style:
+  # solid line
+  - "-"
+  # dashed line
+  - "--"
+  # dotted line
+  - ":"
 
-connect_data_gaps: true
-title: Performance diagram - Dummy points
-xaxis:
-  title:  SUCCESS RATE (1 - FAR)
-yaxis:
-  title: Probability of Detection (POD)
 
-datafile: ./dummy.txt
-
-lines:
-
-  - name: Model 1
-    color: blue
-    width: 1
-
-  - name: Model 2
-    color: firebrick
-    width: 1
-
-  - name: Model 3
-    color: orange
-    width: 2
-
-  - name: Model4
-    color: limegreen
-    width: 1
-
-  - name: Model_C
-    color: pink
-    width: 2
+stat_input:  /d2/www/dtcenter/met/metviewer_output/data/plot_20200317_151252.data
+plot_output: /tmp/performance_diagram_default.png
