Added some useful comments

--- a/metplotpy/plots/config/performance_diagram_defaults.yaml
+++ b/metplotpy/plots/config/performance_diagram_defaults.yaml
@@ -39,7 +39,9 @@ indy_vals:
   - 2016-08-17 00:00:00
 fcst_var_val:
   APCP_06:
+    # x-axis/independent variable
     - FAR
+    # y-axis/dependent variable
     - PODY
 series_val:
   model:
