Set one of the values of plot_ci to 'norm', so the error bars are plotted.

--- a/metplotpy/plots/config/performance_diagram_defaults.yaml
+++ b/metplotpy/plots/config/performance_diagram_defaults.yaml
@@ -6,9 +6,9 @@ xaxis: Success Rate (1 - FAR)
 yaxis: Probability of Detection (PODY)
 
 plot_ci:
-  - boot
+  - none
+  - norm
   - None
-  - Norm
 plot_disp:
   - True
   - True
