--- a/metplotpy/plots/config/performance_diagram_defaults.yaml
+++ b/metplotpy/plots/config/performance_diagram_defaults.yaml
@@ -3,7 +3,8 @@
 # Line and marker plots of series data of Success Rate (1-FAR) on x-axis vs. PODY on y-axis.
 title: Performance Diagram ("Default title")
 xaxis: Success Ratio (1 - FAR)
-yaxis: Probability of Detection (PODY)
+yaxis_1: Probability of Detection (PODY)
+yaxis_2:
 
 plot_ci:
   - none
@@ -40,7 +41,7 @@ indy_vals:
   - 2016-08-16 18:00:00
   - 2016-08-17 00:00:00
 
-fcst_var_val:
+fcst_var_val_1:
   # Name of the variables of interest, the independent and dependent variables
   # will be the same across all fcst_var values
 
@@ -50,7 +51,9 @@ fcst_var_val:
     - FAR
     # y-axis/dependent variable
     - PODY
-series_val:
+fcst_var_val_2:
+
+series_val_1:
   # series_var1
   model:
     # series_val1
@@ -63,6 +66,9 @@ series_val:
     - SH_CMORPH_G193
     # series_val3
     - TROP_CMORPH_G193
+
+series_val2:
+
 user_legend:
   - NH
   - SH
