Set event equalize setting to True

--- a/metplotpy/plots/performance_diagram/custom_performance_diagram.yaml
+++ b/metplotpy/plots/performance_diagram/custom_performance_diagram.yaml
@@ -93,5 +93,5 @@ series_line_style:
   # dotted line
   - ":"
 stat_input:  ./plot_20200317_151252.data
-plot_output: /tmp/performance_diagram_default.png
-event_equalize: True
+plot_output: ./performance_diagram_default.png
+event_equalize: False
