--- a/metplotpy/plots/line/custom_line.yaml
+++ b/metplotpy/plots/line/custom_line.yaml
@@ -28,7 +28,7 @@ lines:
 
   - name: Data2 Trace
     data_file:
-      /Users/minnawin/feature_19_line/METplotpy/metplotpy/plots/line/line2_plot_data.txt
+      ./line2_plot_data.txt
     color: firebrick
     width: 4
     dash: dash
