Replace plot_output with plot_filename to indicate the name of the static plot filename

--- a/metplotpy/plots/config/performance_diagram_defaults.yaml
+++ b/metplotpy/plots/config/performance_diagram_defaults.yaml
@@ -128,6 +128,6 @@ annotation_template:
 
 
 stat_input:  ../performance_diagram/plot_20200317_151252.data
-plot_output: /tmp/performance_diagram_default.png
+plot_filename: /tmp/performance_diagram_default.png
 
 
