--- a/metplotpy/plots/config/performance_diagram_defaults.yaml
+++ b/metplotpy/plots/config/performance_diagram_defaults.yaml
@@ -7,6 +7,7 @@ yaxis_1: Probability of Detection (PODY)
 yaxis_2:
 plot_width: 11
 plot_height: 8.5
+plot_units: cm
 plot_ci:
   - none
   - norm
@@ -52,6 +53,9 @@ fcst_var_val_1:
     - FAR
     # y-axis/dependent variable
     - PODY
+list_stat_1:
+  - FAR
+  - PODY
 fcst_var_val_2:
 
 series_val_1:
