Update with correct input data

--- a/metplotpy/plots/config/performance_diagram_defaults.yaml
+++ b/metplotpy/plots/config/performance_diagram_defaults.yaml
@@ -7,6 +7,8 @@ yaxis_1: Probability of Detection (PODY)
 yaxis_2:
 plot_width: 11
 plot_height: 8.5
+plot_res: 72
+plot_units: in
 plot_ci:
   - none
   - norm
