--- a/metplotpy/plots/roc_diagram/custom_roc_diagram.yaml
+++ b/metplotpy/plots/roc_diagram/custom_roc_diagram.yaml
@@ -1,100 +1,64 @@
-title: ROC Diagram ("Custom title")
-xaxis: False Alarm Rate
-# support two y-axes
-yaxis_1: Probability of Detection (PODY)
-yaxis_2: ''
-legend_ncol: 1
-# draw the specified series lines in the
-# plot
-plot_disp:
-  - True
-  - True
-  - True
-series_order:
-  - 2
-  - 1
-  - 3
-indy_var: fcst_valid_beg
-indy_vals:
-  # defining the datetimes of interest
-  - 2016-08-12 06:00:00
-  - 2016-08-12 12:00:00
-  - 2016-08-12 18:00:00
-  - 2016-08-13 00:00:00
-  - 2016-08-13 06:00:00
-  - 2016-08-13 12:00:00
-  - 2016-08-13 18:00:00
-  - 2016-08-14 00:00:00
-  - 2016-08-14 06:00:00
-  - 2016-08-14 12:00:00
-  - 2016-08-14 18:00:00
-  - 2016-08-15 00:00:00
-  - 2016-08-15 12:00:00
-  - 2016-08-15 18:00:00
-  - 2016-08-16 00:00:00
-  - 2016-08-16 06:00:00
-  - 2016-08-16 12:00:00
-  - 2016-08-16 18:00:00
-  - 2016-08-17 00:00:00
+---
+roc_pct: False
+roc_ctc: True
 
-# support two series values
 series_val_1:
-  model:
-    - GFS_0p25_G193
-  vx_mask:
-    - NH_CMORPH_G193
-    - SH_CMORPH_G193
-    - TROP_CMORPH_G193
-series_val_2: {}
-fcst_var_val_1:
-  # Name of the variables of interest, the independent and dependent variables
-  # will be the same across all fcst_var values
+#  model:
+#    - 'WRF'
+#  vx_mask:
+#    - "EAST"
+#    - "FILL"
 
-  # fcst_var1
-  APCP_06:
-    # x-axis/independent variable
-    - FAR
-    # y-axis/dependent variable
-    - PODY
-fcst_var_val_2:
-user_legend:
-#  - NH
-#  - SH
-#  - TROP
-   - NH
-   - ''
-   - TROP
-
-plot_stat: median
-colors:
-  # red
-  - "#ff0000"
-  # limegreen, as name of color
-  - limegreen
-  # electric indigo/vivid purple
-  - "#8000ff"
-series_line_width:
-  - 1
-  - 1
-  - 3
-series_symbols:
-  # Other supported symbols: small circle = ".", ring/hexagon = "H", rhombus/diamond="d"
-  # Circle
-  - "o"
-  # square
-  - "s"
-  # triangle
-  #- "^"
-  # ring
-  - "H"
-series_line_style:
-  # solid line
-  - "-"
-  # dashed line
-  - "--"
-  # dotted line
-  - ":"
-stat_input:  ./plot_20200317_151252.data
-plot_filename: ./performance_diagram_default.png
+series_val_2:
+plot_disp:
+    - True
+#    - True
+series_order:
+    - 1
+#    - 2
+stat_curve: 'None'
+add_point_thresholds: False
 event_equalize: False
-show_plot_in_browser: True
+title: "ROC PCT 20200507_074426 "
+xaxis: "POFD (False Detection Rate)"
+yaxis_1: "PODY"
+yaxis_2: ''
+plot_width: 6
+plot_height: 6
+plot_res: 72
+plot_units: in
+
+colors:
+#    - "#ff0000"
+    - "#8000ff"
+series_symbols:
+#    - "Small circle"
+    - "Small circle"
+series_type:
+#    - 'joined lines'
+    - 'joined lines'
+series_line_style:
+#    - 'solid'
+    - 'solid'
+series_line_width:
+#    - 1
+    - 1
+user_legend:
+#  - ''
+  - 'CTC ROC'
+
+legend_size: 0.8 # relative magnification
+legend_box: 'o' # legend box type - o: box, n: none
+legend_inset:
+  x: 0.
+  y: -0.14
+plot_caption: "This is caption"
+caption_weight: "plain text"
+caption_color: "#333333"
+caption_size: "0.8" # relative magnification
+caption_offset: 3  # axis perpendicular location adjustment
+caption_align: 0, # axis parallel location adjustment
+
+stat_input:  ./plot_20200507_074426.data
+plot_filename: ./custom_roc_diagram.png
+
