--- a/metplotpy/plots/config/line_defaults.yaml
+++ b/metplotpy/plots/config/line_defaults.yaml
@@ -1,87 +1,173 @@
----
-# Default settings specific to series plot
-# Line and marker plots of false alarm rate (x-axis) vs probability of detection (y-axis).
-title: Series
-xaxis: test x_label
-yaxis_1: test y_label
-yaxis_2:
-
-plot_width: 11
-plot_height: 8.5
-plot_res: 200
-plot_units: cm
-
-roc_pct: False
-roc_ctc: True
-
-add_point_thresholds: true
-
-series_val_1:
-    model:
-     - WRF
-    vx_mask:
-      - EAST
-      - FILL
-series_val_2:
-fcst_var_val1:
-fcst_var_val2:
-
-indy_vars:
-indy_vals:
-
-user_legend:
-  - ' '
-  - ' '
-# two types supported, 'n' for none and 'o' for box
-legend_box: 'n'
-# number of columns in legend
-legend_ncol: 3
-legend_inset:
-  x: 0.
-  y: -0.14
-legend_size: 0.8
-
-plot_disp:
-  - True
-  - True
-series_order:
-  - 1
-  - 2
-stat_curve: 'None'
-
+alpha: 0.05
+box_avg: 'False'
+box_boxwex: 0.2
+box_notch: 'False'
+box_outline: 'True'
+box_pts: 'False'
+caption_align: 0
+caption_col: '#333333'
+caption_offset: 3
+caption_size: 0.8
+caption_weight: 1
+cex: 1
 colors:
-  - "#ff0000"
-  - "#8000ff"
-series_symbols:
-  - "Small circle"
-  - "Small circle"
-series_line_width:
-  - 1
-  - 1
-series_type:
-  - "joined lines"
-  - "joined lines"
-
+- '#ff0000'
+- '#00aaff'
+- '#070a06'
+con_series:
+- 1
+- 1
+- 1
+derived_series_1:
+- - CONTROL TMP ME
+  - GTS+RAIN TMP ME
+  - DIFF
+derived_series_2: []
+dump_points_1: 'True'
+dump_points_2: 'False'
+event_equal: 'True'
+fcst_var_val_1:
+  TMP:
+  - ME
+fcst_var_val_2: {}
+fixed_vars_vals_input:
+  obtype:
+    obtype_1:
+    - SFCSHP
+  fcst_lev:
+    fcst_lev_0:
+    - Z02
+grid_col: '#f5274a'
+grid_lty: 3
+grid_lwd: 1
+grid_on: 'True'
+grid_x: listX
+indy_stagger_1: 'True'
+indy_stagger_2: 'False'
+indy_vals:
+- '0'
+- '60000'
+- '120000'
+- '180000'
+- '240000'
+indy_var: fcst_lead
+legend_box: o
+legend_inset:
+  x: 0.0
+  y: -0.25
+legend_ncol: 3
+legend_size: 0.8
+line_type: N/A
+list_stat_1:
+- ME
+list_stat_2: []
+list_static_val:
+  fcst_var: TMP
+mar:
+- 8
+- 4
+- 5
+- 4
+method: bca
+mgp:
+- 1
+- 1
+- 0
+num_iterations: 1
+num_threads: -1
+plot_ci:
+- none
+- none
+- std
+plot_disp:
+- 'True'
+- 'True'
+- 'True'
+plot_filename: /tmp/line.png
+plot_height: 8.5
+plot_res: 72
+plot_stat: median
+plot_type: png16m
+plot_units: in
+plot_width: 11.0
+random_seed: null
 series_line_style:
-  # solid line
-  - "-"
-  # solid line
-  - "-"
-
-# Perform event equalization to check for missing data
-event_equalize: False
-
-plot_caption: "This is caption"
-caption_weight: "plain text"
-caption_color: "#333333"
-caption_size: "0.8" # relative magnification
-caption_offset: 3  # axis perpendicular location adjustment
-caption_align: 0, # axis parallel location adjustment
-
-stat_input:  ./plot_20200507_074426.data
-plot_filename: ./roc_diagram_default.png
-show_plot_in_browser: True
-
-show_nstats: False
-
-
+- '-'
+- '-'
+- '-'
+series_line_width:
+- 1
+- 1
+- 1
+series_order:
+- 1
+- 2
+- 3
+series_symbols:
+- .
+- .
+- .
+series_type:
+- b
+- b
+- b
+series_val_1:
+  model:
+  - CONTROL
+  - GTS+RAIN
+series_val_2: {}
+show_nstats: 'False'
+show_signif:
+- 'False'
+- 'False'
+- 'True'
+stat_input: ../line/line.data
+sync_yaxes: 'False'
+title: test title
+title_align: 0.5
+title_offset: -2
+title_size: 1.4
+title_weight: 2.0
+user_legend: []
+variance_inflation_factor: 'True'
+vert_plot: 'False'
+x2lab_align: 0.5
+x2lab_offset: -0.5
+x2lab_size: 0.8
+x2lab_weight: 1
+x2tlab_horiz: 0.5
+x2tlab_orient: 1
+x2tlab_perp: 1
+x2tlab_size: 0.8
+xaxis: test x_label
+xaxis_reverse: 'False'
+xlab_align: 0.5
+xlab_offset: 2
+xlab_size: 1
+xlab_weight: 1
+xlim: []
+xtlab_decim: 0
+xtlab_horiz: 0.5
+xtlab_orient: 1
+xtlab_perp: -0.75
+xtlab_size: 1
+y2lab_align: 0.5
+y2lab_offset: 1
+y2lab_size: 1
+y2lab_weight: 1
+y2lim: []
+y2tlab_horiz: 0.5
+y2tlab_orient: 1
+y2tlab_perp: 1
+y2tlab_size: 1.0
+yaxis_1: test y_label
+yaxis_2: ''
+ylab_align: 0.5
+ylab_offset: -2
+ylab_size: 1
+ylab_weight: 1
+ylim: []
+ytlab_horiz: 0.5
+ytlab_orient: 1
+ytlab_perp: 0.5
+ytlab_size: 1
