change 'event_equalize' to 'event_equal'

--- a/metplotpy/plots/config/roc_diagram_defaults.yaml
+++ b/metplotpy/plots/config/roc_diagram_defaults.yaml
@@ -70,7 +70,7 @@ series_line_style:
   - "-"
 
 # Perform event equalization to check for missing data
-event_equalize: False
+event_equal: False
 
 plot_caption: "This is caption"
 caption_weight: "plain text"
