--- a/metplotpy/plots/config/performance_diagram_defaults.yaml
+++ b/metplotpy/plots/config/performance_diagram_defaults.yaml
@@ -116,7 +116,7 @@ series_line_style:
   - ":"
 
 # Perform event equalization to check for missing data
-event_equalize: False
+event_equal: False
 
 # annotation_template: "%y in"  annotates each y-value with the  units 'in' for inches, preserving the whitespace between the
 # y-value and the units
