Replace caption_weight with numeric value (which is what is used by METviewer).

--- a/metplotpy/plots/config/performance_diagram_defaults.yaml
+++ b/metplotpy/plots/config/performance_diagram_defaults.yaml
@@ -131,8 +131,9 @@ event_equalize: False
 annotation_template: 
 
 plot_caption: "This is caption"
-caption_weight: "plain text"
-caption_color: "#333333"
+caption_weight: 1
+#caption_color: "#333333"
+caption_color: "purple"
 caption_size: ".8" # relative magnification
 caption_offset: 0  # axis perpendicular location adjustment (up/down)
 caption_align: 3 # axis parallel location adjustment (left/right 3.8 is max value, 2.9 is min value)
