--- a/metplotpy/plots/config/line_defaults.yaml
+++ b/metplotpy/plots/config/line_defaults.yaml
@@ -10,47 +10,25 @@ caption_offset: 3
 caption_size: 0.8
 caption_weight: 1
 cex: 1
-colors:
-- '#ff0000'
-- '#00aaff'
-- '#070a06'
-con_series:
-- 1
-- 1
-- 1
-derived_series_1:
-- - CONTROL TMP ME
-  - GTS+RAIN TMP ME
-  - DIFF
+colors: []
+con_series: []
+derived_series_1:[]
 derived_series_2: []
-dump_points_1: 'True'
+dump_points_1: 'False'
 dump_points_2: 'False'
-event_equal: 'True'
-fcst_var_val_1:
-  TMP:
-  - ME
+event_equal: 'False'
+fcst_var_val_1:{}
 fcst_var_val_2: {}
-fixed_vars_vals_input:
-  obtype:
-    obtype_1:
-    - SFCSHP
-  fcst_lev:
-    fcst_lev_0:
-    - Z02
+fixed_vars_vals_input:{}
 grid_col: '#f5274a'
 grid_lty: 3
 grid_lwd: 1
 grid_on: 'True'
 grid_x: listX
-indy_stagger_1: 'True'
+indy_stagger_1: 'False'
 indy_stagger_2: 'False'
-indy_vals:
-- '0'
-- '60000'
-- '120000'
-- '180000'
-- '240000'
-indy_var: fcst_lead
+indy_vals:[]
+indy_var: ''
 legend_box: o
 legend_inset:
   x: 0.0
@@ -58,31 +36,23 @@ legend_inset:
 legend_ncol: 3
 legend_size: 0.8
 line_type: N/A
-list_stat_1:
-- ME
+list_stat_1: []
 list_stat_2: []
-list_static_val:
-  fcst_var: TMP
+list_static_val: {}
 mar:
 - 8
 - 4
 - 5
 - 4
-method: bca
+method: ''
 mgp:
 - 1
 - 1
 - 0
 num_iterations: 1
 num_threads: -1
-plot_ci:
-- none
-- none
-- std
-plot_disp:
-- 'True'
-- 'True'
-- 'True'
+plot_ci:[]
+plot_disp:[]
 plot_filename: /tmp/line.png
 plot_height: 8.5
 plot_res: 72
@@ -91,36 +61,15 @@ plot_type: png16m
 plot_units: in
 plot_width: 11.0
 random_seed: null
-series_line_style:
-- '-'
-- '-'
-- '-'
-series_line_width:
-- 1
-- 1
-- 1
-series_order:
-- 1
-- 2
-- 3
-series_symbols:
-- .
-- .
-- .
-series_type:
-- b
-- b
-- b
-series_val_1:
-  model:
-  - CONTROL
-  - GTS+RAIN
+series_line_style:[]
+series_line_width:[]
+series_order:[]
+series_symbols:[]
+series_type:[]
+series_val_1:{}
 series_val_2: {}
 show_nstats: 'False'
-show_signif:
-- 'False'
-- 'False'
-- 'True'
+show_signif:[]
 stat_input: ../line/line.data
 sync_yaxes: 'False'
 title: test title
