--- a/metplotpy/plots/config/performance_diagram_defaults.yaml
+++ b/metplotpy/plots/config/performance_diagram_defaults.yaml
@@ -131,20 +131,19 @@ event_equal: False
 annotation_template: 
 
 plot_caption: "This is caption"
-caption_weight: 1
+caption_weight: 4
 caption_color: "#ff0000"
-#caption_color: "purple"
-caption_size: ".8" # relative magnification
-caption_offset: 3  # axis perpendicular location adjustment (up/down)
-caption_align: 0 # axis parallel location adjustment (left/right 3.8 is max value, 2.9 is min value)
+caption_size: "1.3" # relative magnification
+caption_offset: 2.95  # axis perpendicular location adjustment (up/down 3.8 is max value, 2.9 is min value)
+caption_align: -.1 # axis parallel location adjustment (left/right)
 
 # x-axis labels
-xlab_size: 1
+xlab_size: 1.3
 
 # x-axis ticks
 #these three are unsupported
-xtlab_orient: 0
-xtlab_size: 1
+xtlab_orient: 2
+xtlab_size: 1.5
 
 # y-axis labels
 ylab_size: 1
