--- a/metplotpy/plots/config/performance_diagram_defaults.yaml
+++ b/metplotpy/plots/config/performance_diagram_defaults.yaml
@@ -139,6 +139,12 @@ caption_align: -.1 # axis parallel location adjustment (left/right)
 
 # x-axis labels
 xlab_size: 1.3
+#right-left positioning
+xlab_offset: 2
+#up-down positioning
+xlab_align: .5 
+# text weight: plain text, bold, italic, bold italic
+xlab_weight: 4
 
 # x-axis ticks
 #these three are unsupported
