--- a/metplotpy/plots/config/performance_diagram_defaults.yaml
+++ b/metplotpy/plots/config/performance_diagram_defaults.yaml
@@ -142,7 +142,7 @@ xlab_size: 1.3
 #right-left positioning
 xlab_offset: 2
 #up-down positioning
-xlab_align: .5 
+xlab_align: .5
 # text weight: plain text, bold, italic, bold italic
 xlab_weight: 4
 
@@ -153,10 +153,16 @@ xtlab_size: 1.5
 
 # y-axis labels
 ylab_size: 1
+#left-right positioning
+ylab_align: 0.5 #default 0.5
+#up-down positioning
+ylab_offset: -2 #default -2
+# text weight: plain text, bold, italic, bold italic
+ylab_weight: 3
 
 # y-axis ticks
 ytlab_orient: 1
-ytlab_size: 1
+ytlab_size: 1.3
 
 stat_input:  ../performance_diagram/plot_20200317_151252.data
 plot_filename: /tmp/performance_diagram_default.png
