Added test command line arguments.

--- a/metplotpy/plots/config/hovmoeller_defaults.yaml
+++ b/metplotpy/plots/config/hovmoeller_defaults.yaml
@@ -1,7 +1,9 @@
 plot_filename: hovmoeller.png
 
 title: Hovmoeller Plot
+
 xaxis:
-  title: x-values
+  title: Longitude
+
 yaxis:
-  title: y-values
+  title: Time
