--- a/metplotpy/plots/config/hovmoeller_defaults.yaml
+++ b/metplotpy/plots/config/hovmoeller_defaults.yaml
@@ -3,10 +3,12 @@ plot_filename: hovmoeller.png
 title: Hovmoeller Plot
 
 xaxis:
-  title: Longitude
+  title:
+    text: Longitude
 
 yaxis:
-  title: Time
+  title:
+    text: Time
 
 date_start: 2016-01-01
 date_end: 2016-03-31
@@ -14,7 +16,6 @@ date_end: 2016-03-31
 lat_max: 5
 lat_min: -5
 
-speed: 2
 source: ERAI
 
 var_name: precip
@@ -22,6 +23,5 @@ var_units: mm / day
 unit_conversion: 250
 
 contour_min: 0.2
-contour_max: 1.2
+contour_max: 1.6
 contour_del: 0.2
-
