--- a/metplotpy/plots/config/roc_diagram_defaults.yaml
+++ b/metplotpy/plots/config/roc_diagram_defaults.yaml
@@ -73,7 +73,7 @@ event_equal: False
 
 plot_caption: "This is caption"
 caption_weight: "plain text"
-caption_color: "#333333"
+caption_col: "#333333"
 caption_size: "0.8" # relative magnification
 caption_offset: 3  # axis perpendicular location adjustment
 caption_align: 0, # axis parallel location adjustment
