--- a/metplotpy/plots/config/performance_diagram_defaults.yaml
+++ b/metplotpy/plots/config/performance_diagram_defaults.yaml
@@ -146,16 +146,16 @@ caption_offset: 2.95  # axis perpendicular location adjustment (up/down 3.8 is m
 caption_align: -.1 # axis parallel location adjustment (left/right)
 
 # x-axis labels
-xlab_size: 1.3
-#left-right positioning
-xlab_align: .5
+xlab_size:  1.3
 #up-down positioning
+xlab_align: .5
+#left-right positioning
 xlab_offset: 2
 # text weight: plain text, bold, italic, bold italic
 xlab_weight: 2
 
 # x-axis ticks
-#these three are unsupported
+#these are unsupported
 xtlab_orient: 2
 xtlab_size: 1.5
 
