--- a/test/roc_diagram/test_roc_diagram.yaml
+++ b/test/roc_diagram/test_roc_diagram.yaml
@@ -89,5 +89,5 @@ caption_align: .1 #0 # axis parallel location adjustment
 # Make the plot generated in METviewer interactive
 create_html: 'True'
 stat_input:  ./plot_20200507_074426.data
-plot_filename: ./custom_roc_diagram.png
+plot_filename: ./roc_diagram_actual.png
 
