--- a/metplotpy/plots/roc_diagram/custom_roc_diagram.yaml
+++ b/metplotpy/plots/roc_diagram/custom_roc_diagram.yaml
@@ -3,6 +3,7 @@ roc_pct: False
 roc_ctc: True
 
 series_val_1:
+# e.g.
 #  model:
 #    - 'WRF'
 #  vx_mask:
@@ -12,10 +13,8 @@ series_val_1:
 series_val_2:
 plot_disp:
     - True
-#    - True
 series_order:
     - 1
-#    - 2
 stat_curve: 'None'
 add_point_thresholds: False
 event_equal: False
@@ -33,21 +32,20 @@ xaxis: Custom POFD #"POFD (False Detection Rate)"
 yaxis_1: "PODY Custom"
 
 # X1 axis settings
-xlab_align: 2
-xlab_offset: 0 #2
-xlab_size:  1.5
-xlab_weight: 1
+xlab_size:  1.75
+xlab_weight: 2
+xlab_offset: 0
 xtlab_horiz: 0.5
-xtlab_orient: 2 #1
-xtlab_size: 2 #1
+xtlab_orient: 2
+xtlab_size: 1.2
 
-ylab_align: 0.5
-ylab_offset: -2
-ylab_size: 2
+# Y1 axis settings
+ylab_size: 2.5
 ylab_weight: 1
-# 0=-90 degrees, 1=0 degrees, 2=0 degrees, 3=-90 degrees
+ylab_offset: 0
+# orientation: 0=-90 degrees, 1=0 degrees, 2=0 degrees, 3=-90 degrees
 ytlab_orient: 1
-ytlab_size: 1.2
+ytlab_size: 0.9
 
 plot_width: 6
 plot_height: 6
@@ -55,22 +53,16 @@ plot_res: 72
 plot_units: in
 
 colors:
-#    - "#ff0000"
     - "#8000ff"
 series_symbols:
-#    - "Small circle"
     - "Small circle"
 series_type:
-#    - 'joined lines'
     - 'joined lines'
 series_line_style:
-#    - 'solid'
     - 'solid'
 series_line_width:
-#    - 1
     - 1
 user_legend:
-#  - ''
   - 'CTC ROC'
 
 legend_size: 0.8 # relative magnification
@@ -81,7 +73,7 @@ legend_inset:
 
 plot_caption: "This is caption"
 # weight of text: 1=plain text, 2=bold, 3=italic, 4=bold italic
-caption_weight: 4
+caption_weight: 3
 # caption text color
 caption_col: "#ff4444"
 caption_size: 1.2 # relative magnification
@@ -93,5 +85,5 @@ caption_align: .1 #0 # axis parallel location adjustment
 # Make the plot generated in METviewer interactive
 create_html: 'True'
 stat_input:  ./plot_20200507_074426.data
-plot_filename: ./custom_roc_diagram.png
+plot_filename: ./roc_diagram_expected.png
 
